# Agenda-Juri

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml
agenda/: admin.py  forms.py  models.py  urls.py  views.py
backend/: .env.example  .gitignore  README.md  manage.py  pyproject.toml  requirements.txt  vercel.json
backend/agenda/: models.py  tests.py  urls.py  views.py
backend/agenda/migrations/: 0001_initial.py  0002_evento_google_event_id.py
backend/agenda/services/: google_calendar.py
backend/api/: index.py
backend/clientes/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
backend/clientes/migrations/: 0001_initial.py  0002_cliente_tipo_cliente.py
backend/core/: api.py  middleware.py  models.py  permission_utils.py  permissions.py  tests.py  urls.py  utils.py  views.py
backend/core/management/commands/: seed_demo.py
backend/jurisagenda/: asgi.py  settings.py  urls.py
backend/processos/: forms.py  models.py  tests.py  urls.py  views.py
backend/processos/migrations/: 0001_initial.py  0002_alter_processo_numero_processo_length.py  0003_alter_processo_numero_processo.py
backend/usuarios/: admin.py  auth_urls.py  forms.py  models.py  tests.py  urls.py  views.py
backend/usuarios/migrations/: 0001_initial.py  0002_cleanup_legacy_usuario_columns.py  0003_align_cargo_with_auth_group.py  0003_cargo.py  0003_remove_usuario_oab_remove_usuario_foto.py  0004_remove_usuario_oab.py  0004_usuario_google_sub.py  0005_remove_manual_password_fields.py  0006_usuario_google_refresh_token_usuario_google_token_and_more.py
core/: urls.py  (+2 more)
(+133 files in other folders)
