[project]
name = "agenda-juri"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url>=3.1.2",
    "django-cors-headers>=4.9.0",
    "django>=6.0.3",
    "pillow>=11.3.0",
    "psycopg[binary]>=3.3.3",
    "whitenoise>=6.12.0",
]
